<resources>
    <string name="app_name">midnight_chevves</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="save">Save</string>
    <string name="back_button">Back Button</string>
    <string name="first_and_last_name">First and Last Name</string>
    <string name="sign_up">Sign up</string>
    <string name="proceed">Proceed</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="checkout">Proceed to Checkout</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="address">Address</string>
    <string name="residential">Residential</string>
    <string name="office">Office</string>
    <string name="location">Get Location</string>
    <string name="change">Change Location</string>


    <string-array name="payment_method_array">
        <item>GCash</item>
        <item>Cash on Delivery</item>
        <item>BDO</item>
        <item>BPI</item>
    </string-array>
    <string name="about">
        "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sit amet nisl efficitur, ultricies magna finibus, feugiat lorem. Nulla varius dapibus erat sed elementum. Aenean in aliquam arcu. Nam pellentesque sed urna eu rhoncus. Cras semper, ligula nec cursus aliquet, ex dolor condimentum metus, ac consequat nulla sem eget ex. Quisque fringilla feugiat ultrices. Morbi ut arcu mollis libero dapibus tincidunt. Vivamus ut nibh pharetra mauris pulvinar molestie eleifend nec nulla. Integer quis metus est. Phasellus lacinia consectetur lorem non lobortis. Phasellus sit amet fermentum nunc, sit amet elementum lorem. Maecenas elementum tempor magna eu commodo. Quisque viverra arcu purus, non tempus nulla condimentum et. Donec non diam vel ipsum ornare viverra non id nisl. Sed vel commodo elit. Pellentesque a metus a massa posuere fringilla.

Quisque euismod elit in lorem scelerisque mollis. Suspendisse ac ante quis felis hendrerit dapibus. Phasellus ut felis nisi. Pellentesque nec ullamcorper nunc. Etiam porttitor suscipit ante non dignissim. Etiam suscipit enim ac lectus auctor pellentesque. Aenean consequat efficitur est ut porta. Morbi ut mi nibh. Praesent fermentum enim a aliquam porta. Phasellus interdum elementum nunc, quis placerat nisi. Vivamus sollicitudin nulla a ante sodales egestas. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus leo augue, elementum in consectetur ut, egestas non libero.

Mauris sagittis scelerisque tortor, in sodales felis rhoncus non. Fusce eget massa quis dui blandit ullamcorper id nec tortor. Vestibulum sapien dui, pellentesque sit amet posuere eget, rhoncus a tortor. Sed nec augue leo. Curabitur tempor, risus eu laoreet placerat, nisl velit interdum lorem, vel tincidunt metus ligula nec nisl. Ut porta ullamcorper viverra. Integer vehicula dictum congue.

Curabitur iaculis pharetra tellus sed bibendum. Aliquam erat volutpat. Mauris gravida, magna ut malesuada ultrices, magna ex luctus turpis, quis pulvinar turpis augue ac neque. Fusce cursus dui ac ligula tempor, quis pharetra purus dictum. Duis cursus cursus lorem quis euismod. Phasellus diam risus, lobortis ac varius ac, ultrices blandit sapien. Ut id sem id lorem ullamcorper pharetra. Cras tempor ipsum in lorem gravida vulputate.

Maecenas in dapibus metus, sit amet fringilla nunc. Sed a maximus lectus. Fusce sit amet sapien semper, lobortis augue sit amet, fermentum sem. Integer scelerisque, ex commodo bibendum semper, velit ligula egestas justo, non euismod tortor turpis vel odio. In ac odio quis dolor gravida suscipit eu ut eros. Phasellus nec purus egestas, elementum lorem vitae, hendrerit arcu. Integer ultrices tincidunt neque quis luctus. Quisque a mi maximus, vehicula felis ut, commodo nisi. Cras diam purus, aliquet eu felis eu, finibus iaculis massa. Fusce porta neque nisl, pretium sodales mauris cursus consectetur."
    </string>

</resources>