<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpStep2Activity">

    <ImageButton
        android:id="@+id/signup_step2_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_baseline_arrow_back_ios_24"
        android:contentDescription="@string/back_button"
        android:scaleType="fitXY" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_signup_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_step2_back"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="35dp"
            android:ems="10"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_signup_confirm_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_signup_password"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="35dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_signup3_redirect"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="25dp"
        android:layout_alignParentBottom="true"
        android:text="@string/proceed" />

</RelativeLayout>