<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Customer.Activities.AccountDetailsActivity">

    <ImageButton
        android:id="@+id/edit_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_baseline_arrow_back_ios_24"
        android:contentDescription="@string/back_button"
        android:scaleType="fitXY" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/edit_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@id/edit_back"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:src="@drawable/ic_baseline_person_24" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edit_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_image"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="35dp"
        android:ems="10"
        android:hint="@string/name"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edit_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_edit_name"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="35dp"
        android:ems="10"
        android:hint="@string/username"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:startIconDrawable="@drawable/ic_baseline_people_alt_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789qwertzuiopasdfghjklyxcvbnmQWERTZUIOPASDFGHJKLYXCVBNM_-" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edit_number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_edit_username"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="35dp"
        android:ems="10"
        android:hint="@string/phone_number"
        app:prefixText="+63  "
        app:prefixTextColor="?attr/colorPrimary"
        app:startIconDrawable="@drawable/ic_baseline_local_phone_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save_edit"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="25dp"
        android:text="@string/save"
        android:textAlignment="center"
        android:textColor="#606467"
        app:cornerRadius="20dp" />
</RelativeLayout>