<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save_changes2"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="25dp"
        android:text="@string/save"
        android:textAlignment="center"
        android:textColor="#606467"
        app:cornerRadius="20dp" />

    <ImageButton
        android:id="@+id/address_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_baseline_arrow_back_ios_24"
        android:contentDescription="@string/back_button"
        android:scaleType="fitXY" />

    <Button
        android:id="@+id/bt_location"
        android:layout_width="179dp"
        android:layout_height="38dp"
        android:layout_marginLeft="98dp"
        android:layout_marginTop="30dp"
        android:text="@string/address"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="95dp">
        <TextView
            android:id="@+id/text_view1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/text_view2"/>
    </LinearLayout>


    <fragment
        android:id="@+id/google_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="488dp"
        android:layout_marginTop="147dp" />


</RelativeLayout>
