<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Customer.Activities.LoginSecurityActivity">

    <ImageButton
        android:id="@+id/edit_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:scaleType="fitXY"
        android:background="@drawable/ic_baseline_arrow_back_ios_24" />

    <TextView
        android:id="@+id/login_security_wip"
        android:layout_width="match_parent"
        android:layout_below="@+id/edit_back"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="WIP"
        android:textAlignment="center"
        android:textSize="70sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edit_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_security_wip"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="35dp"
        android:ems="10"
        android:hint="@string/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edit_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_edit_name"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="35dp"
        android:ems="10"
        android:hint="@string/username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789qwertzuiopasdfghjklyxcvbnm_-"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edit_number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_edit_username"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="35dp"
        app:prefixText="+63  "
        app:prefixTextColor="?attr/colorPrimary"
        android:layout_marginTop="35dp"
        android:layout_marginRight="35dp"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        android:ems="10"
        android:hint="@string/phone_number">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save_edit"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/layout_edit_number"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:text="@string/save"
        android:textAlignment="center"
        android:textColor="#606467"
        app:cornerRadius="20dp" />
</RelativeLayout>